Update Gestion Usuarios

--- a/Papeleria.LogicaNegocio/Papeleria.LogicaNegocio.csproj
+++ b/Papeleria.LogicaNegocio/Papeleria.LogicaNegocio.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Papeleria.Comun\Papeleria.Comun.csproj" />
+  </ItemGroup>
+
 </Project>
