--- a/Papeleria.AccesoDatos/Papeleria.AccesoDatos.csproj
+++ b/Papeleria.AccesoDatos/Papeleria.AccesoDatos.csproj
@@ -7,7 +7,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="EF\" />
     <Folder Include="Memoria\" />
     <Folder Include="Migrations\" />
   </ItemGroup>
@@ -19,6 +18,10 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Papeleria.LogicaNegocio\Papeleria.LogicaNegocio.csproj" />
   </ItemGroup>
 
 </Project>
