--- a/.gitignore
+++ b/.gitignore
@@ -412,3 +412,8 @@ FodyWeavers.xsd
 *.v2
 .vs/Papeleria/v17/.suo
 /.vs
+.vs/Papeleria/DesignTimeBuild/.dtbcache.v2
+.vs/Papeleria/v17/.suo
+.vs/Papeleria/v17/DocumentLayout.json
+.vs/ProjectEvaluation/papeleria.metadata.v7.bin
+.vs/ProjectEvaluation/papeleria.projects.v7.bin
