--- a/.gitignore
+++ b/.gitignore
@@ -417,3 +417,5 @@ FodyWeavers.xsd
 .vs/Papeleria/v17/DocumentLayout.json
 .vs/ProjectEvaluation/papeleria.metadata.v7.bin
 .vs/ProjectEvaluation/papeleria.projects.v7.bin
+.vs/Papeleria/v17/DocumentLayout.json
+.vs/Papeleria/v17/.suo
