--- a/.gitignore
+++ b/.gitignore
@@ -419,3 +419,9 @@ FodyWeavers.xsd
 .vs/ProjectEvaluation/papeleria.projects.v7.bin
 .vs/Papeleria/v17/DocumentLayout.json
 .vs/Papeleria/v17/.suo
+.vs/ProjectEvaluation/papeleria.projects.v7.bin
+.vs/ProjectEvaluation/papeleria.metadata.v7.bin
+.vs/Papeleria/v17/DocumentLayout.json
+.vs/Papeleria/v17/.suo
+.vs/Papeleria/v17/.futdcache.v2
+.vs/Papeleria/DesignTimeBuild/.dtbcache.v2
