--- a/.gitignore
+++ b/.gitignore
@@ -425,3 +425,4 @@ FodyWeavers.xsd
 .vs/Papeleria/v17/.suo
 .vs/Papeleria/v17/.futdcache.v2
 .vs/Papeleria/DesignTimeBuild/.dtbcache.v2
+.vs/Papeleria/v17/DocumentLayout.json
