--- a/.gitignore
+++ b/.gitignore
@@ -426,3 +426,8 @@ FodyWeavers.xsd
 .vs/Papeleria/v17/.futdcache.v2
 .vs/Papeleria/DesignTimeBuild/.dtbcache.v2
 .vs/Papeleria/v17/DocumentLayout.json
+.vs/Papeleria/v17/.futdcache.v2
+.vs/Papeleria/v17/.suo
+.vs/Papeleria/v17/DocumentLayout.json
+.vs/ProjectEvaluation/papeleria.metadata.v7.bin
+.vs/ProjectEvaluation/papeleria.projects.v7.bin
